@@ -60,6 +60,7 @@ E(OP_PetBuffWindow)
 E(OP_OnLevelMessage)
 E(OP_Barter)
 E(OP_ApplyPoison)
+E(OP_DzExpeditionEndsWarning)
 //list of packets we need to decode on the way in:
 D(OP_SetServerFilter)
 D(OP_CharacterCreate)
