@@ -51,7 +51,7 @@ E(OP_InspectAnswer)
 E(OP_Track)
 E(OP_DeleteSpawn)
 E(OP_ApplyPoison)
-
+E(OP_DzExpeditionEndsWarning)
 //list of packets we need to decode on the way in:
 D(OP_SetServerFilter)
 D(OP_CharacterCreate)
