@@ -383,7 +383,7 @@ bool ZoneServer::Process() {
 				break;
 			//bounce the packet to the correct zone server, if its up
 			ServerSpawnCondition_Struct* ssc = (ServerSpawnCondition_Struct*)pack->pBuffer;
-			zoneserver_list.SendPacket(ssc->zoneID, 0, pack);
+			zoneserver_list.SendPacket(ssc->zoneID, ssc->instanceID, pack);
 			break;
 		}
 		case ServerOP_SpawnEvent: {
